PA_Education/TestMenifest/force-app/main/default/objects/SolutionDelivery__c/SolutionDelivery__c.object-meta.xml
<CustomObject>
    <description>Solution Delivery 등록시, Title 및 Description 이 카드형식으로 노출</description>
    <label>Solution Delivery</label>
    <nameField>
        <displayFormat>Solution Delivery-{0000}</displayFormat>
        <label>Solution Delivery Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>