PA_Education/TestMenifest/force-app/main/default/objects/SolutionDelivery__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Solution Delivery Description</description>
    <label>내용</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>