PA_Education/TestMenifest/force-app/main/default/objects/SolutionDelivery__c/fields/DescriptionEng__c.field-meta.xml
<CustomField>
    <fullName>DescriptionEng__c</fullName>
    <label>주요기능 (English)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>