PA_Education/TestMenifest/force-app/main/default/objects/SolutionDelivery__c/fields/Subtitle__c.field-meta.xml
<CustomField>
    <fullName>Subtitle__c</fullName>
    <description>부제목</description>
    <inlineHelpText>홈페이지 표시 부제목</inlineHelpText>
    <label>부제목</label>
    <length>255</length>
    <type>Text</type>
</CustomField>