PA_Education/TestMenifest/force-app/main/default/objects/SolutionDelivery__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <label>솔루션 개요</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>