PA_Education/TestMenifest/force-app/main/default/objects/SolutionDelivery__c/fields/SummaryEng__c.field-meta.xml
<CustomField>
    <fullName>SummaryEng__c</fullName>
    <label>솔루션 개요 (English)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>