PA_Education/TestMenifest/force-app/main/default/objects/SolutionDelivery__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Solution Delivery Name</description>
    <label>솔루션 명</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>